Learning Code to get better